// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/Header DefaultNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <div class="lookup-controls card-header">
                <button aria-label="remove lookup"
                        class="remove-lookup-button"
                        data-testid="remove-lookup-button"
                        type="button"
                >
                  <svg aria-hidden="true"
                       focusable="false"
                       data-prefix="fas"
                       data-icon="circle-xmark"
                       class="svg-inline--fa fa-circle-xmark circle"
                       role="img"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 512 512"
                       style="transform-origin: 0.5em 0.5em;"
                  >
                    <g transform="translate(256 256)">
                      <g transform="translate(0, 0)  scale(1.375, 1.375)  rotate(0 0 0)">
                        <path fill="currentColor"
                              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                              transform="translate(-256 -256)"
                        >
                        </path>
                      </g>
                    </g>
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/Header DefaultOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <div class="lookup-controls card-header">
                <button aria-label="remove lookup"
                        class="remove-lookup-button"
                        data-testid="remove-lookup-button"
                        type="button"
                >
                  <svg aria-hidden="true"
                       focusable="false"
                       data-prefix="fas"
                       data-icon="circle-xmark"
                       class="svg-inline--fa fa-circle-xmark circle"
                       role="img"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 512 512"
                       style="transform-origin: 0.5em 0.5em;"
                  >
                    <g transform="translate(256 256)">
                      <g transform="translate(0, 0)  scale(1.375, 1.375)  rotate(0 0 0)">
                        <path fill="currentColor"
                              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                              transform="translate(-256 -256)"
                        >
                        </path>
                      </g>
                    </g>
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/Header WithPreviousLookupSubheaderNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <div class="lookup-controls from-previous-lookup card-header">
                <div>
                  Shared via link
                </div>
                <button aria-label="remove lookup"
                        class="remove-lookup-button"
                        data-testid="remove-lookup-button"
                        type="button"
                >
                  <svg aria-hidden="true"
                       focusable="false"
                       data-prefix="fas"
                       data-icon="circle-xmark"
                       class="svg-inline--fa fa-circle-xmark circle"
                       role="img"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 512 512"
                       style="transform-origin: 0.5em 0.5em;"
                  >
                    <g transform="translate(256 256)">
                      <g transform="translate(0, 0)  scale(1.375, 1.375)  rotate(0 0 0)">
                        <path fill="currentColor"
                              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                              transform="translate(-256 -256)"
                        >
                        </path>
                      </g>
                    </g>
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/Header WithPreviousLookupSubheaderOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <div class="lookup-controls from-previous-lookup card-header">
                <div>
                  Shared via link
                </div>
                <button aria-label="remove lookup"
                        class="remove-lookup-button"
                        data-testid="remove-lookup-button"
                        type="button"
                >
                  <svg aria-hidden="true"
                       focusable="false"
                       data-prefix="fas"
                       data-icon="circle-xmark"
                       class="svg-inline--fa fa-circle-xmark circle"
                       role="img"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 512 512"
                       style="transform-origin: 0.5em 0.5em;"
                  >
                    <g transform="translate(256 256)">
                      <g transform="translate(0, 0)  scale(1.375, 1.375)  rotate(0 0 0)">
                        <path fill="currentColor"
                              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                              transform="translate(-256 -256)"
                        >
                        </path>
                      </g>
                    </g>
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
